# TutorialC_PlusPlus

./: .gitignore
Lesson_11/1)Caesar 's Cipher/: CMakeLists.txt  main.cpp
Lesson_11/2)CheckingEmailAddress/: CMakeLists.txt  main.cpp
Lesson_11/3)IP address validation/: CMakeLists.txt  main.cpp
Lesson_11/4)Evaluation of the results of the tic-tac-toe game/: CMakeLists.txt  main.cpp
Lesson_12/1)Apartment building/: CMakeLists.txt  main.cpp
Lesson_12/2)Sorting/: CMakeLists.txt  main.cpp
Lesson_12/3)Using assert/: CMakeLists.txt  main.cpp
Lesson_12/4)A series of numbers/: CMakeLists.txt  main.cpp
Lesson_13/Task_1/: main.cpp
Lesson_13/Task_2/: main.cpp
Lesson_13/Task_3/: main.cpp
Lesson_14/1) Banquet table/: CMakeLists.txt  main.cpp
Lesson_14/2) Tic-tac-toe/: CMakeLists.txt  main.cpp
Lesson_14/3) Matrices/: CMakeLists.txt  main.cpp
Lesson_14/4) Multiplying a matrix by a vector/: CMakeLists.txt  main.cpp
Lesson_14/5) Pupyrka/: CMakeLists.txt  main.cpp
Lesson_14/6) Snake passage/: CMakeLists.txt  main.cpp
Lesson_14/7) Almost Minecraft/: CMakeLists.txt  main.cpp
Lesson_14/8) Sea battle/: CMakeLists.txt  main.cpp
Lesson_15/Task_1/: main.cpp
Lesson_15/Task_2/: main.cpp
Lesson_15/Task_3/: main.cpp
Lesson_15/Task_4/: main.cpp
Lesson_16/1)Speedometer/: CMakeLists.txt  main.cpp
Lesson_16/2)Stapler of fractional numbers/: CMakeLists.txt  main.cpp
Lesson_16/3)Calculator/: CMakeLists.txt  main.cpp
Lesson_16/4)Mechanical piano/: CMakeLists.txt  main.cpp
Lesson_16/5)Smart home/: CMakeLists.txt  main.cpp
Lesson_17/Task_1/: main.cpp
Lesson_17/Task_2/: main.cpp
Lesson_17/Task_3/: CMakeLists.txt  main.cpp
Lesson_18/Task_1/: main.cpp
Lesson_18/Task_2/: main.cpp
Lesson_18/Task_3/: main.cpp
Lesson_18/Task_4/: CMakeLists.txt  main.cpp
Lesson_19/Task_1/: CMakeLists.txt  main.cpp
Lesson_19/Task_2/: main.cpp  words.txt
Lesson_19/Task_3/: main.cpp
Lesson_19/Task_4/: main.cpp
Lesson_29/Task_2/src/: CMakeLists.txt  Circle.cpp  Rectangle.cpp  Triangle.cpp  main.cpp
Lesson_31/Task_2/src/: CMakeLists.txt  ListGraphClass.cpp  MatrixGraphClass.cpp  TestView.cpp  main.cpp
Lesson_33/Task_1/: CMakeLists.txt  main.cpp
Lesson_34/Task_1/: CMakeLists.txt
Lesson_38/Task_1/RedButton/: CMakeLists.txt  main.cpp
(+156 files in other folders)
